--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 a {
   padding: 5px;
   font-size: 15px;
   color: #e36a0c;
-  background: white url(/images/5613.jpg) right center no-repeat;
+  background: white url(images/5613.jpg) right center no-repeat;
 }
 
 .submit {
@@ -141,13 +141,13 @@ ul {
 #left-sidebar ul li {
   padding-bottom: 10px;
   padding-left: 10px;
-  list-style-image: url(/images/kcMbeodni_20x20.png);
+  list-style-image: url(images/kcMbeodni_20x20.png);
 }
 
 #right-sidebar ul li {
   padding-bottom: 25px;
   padding-left: 25px;
-  list-style-image: url(/images/kcMbeodni_20x20.png);
+  list-style-image: url(images/kcMbeodni_20x20.png);
 }
 
 #left-sidebar {
